fix: fixed z-index issue with main section

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
     background-size: cover;
 }
 
+main {
+    z-index: 10;
+}
+
 .container--text {
     display: flex;
     justify-content: center;
